# django-admin-object-actions

./: .bumpversion.cfg  .gitignore  .travis.yml  MANIFEST.in  Makefile  README.rst  requirements.in  requirements.txt  requirements35.txt  requirements36.txt  requirements37.txt  requirements38.txt  requirements39.txt  setup.cfg  setup.py  tox.ini
admin_object_actions/: __init__.py  admin.py  apps.py  forms.py
admin_object_actions/templates/admin/: object_action_form.html
docs/: Makefile  conf.py  index.rst  make.bat
requirements/: dev.in  dev35.txt  dev36.txt  dev37.txt  dev38.txt  dev39.txt
test_project/: settings.py  urls.py
test_project/templates/admin/: base_site.html
test_project/test_app/: __init__.py  admin.py  apps.py  conftest.py  forms.py  models.py  tests.py
test_project/test_app/migrations/: 0001_initial.py  0002_testrelatedmodel.py
