[bumpversion]
commit = True
current_version = 0.1.4
tag = True
tag_name = {new_version}

[metadata]
name = Django-Admin-Object-Actions
version = attr: admin_object_actions.__version__
author = Nine More Minutes, Inc.
author_email = projects@ninemoreminutes.com
description = Library to support object-level actions in the Django admin interface.
long_description = file: README.rst
long_description_content_type = 
keywords = django, admin, object, actions
license = BSD
url = https://github.com/ninemoreminutes/django-admin-object-actions/
project_urls = 
	Documentation = https://django-admin-object-actions.rtfd.org/
	Source = https://github.com/ninemoreminutes/django-admin-object-actions/
	Tracker = https://github.com/ninemoreminutes/django-admin-object-actions/issues
classifiers = 
	Development Status :: 3 - Alpha
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 1.11
	Framework :: Django :: 2.0
	Framework :: Django :: 2.1
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Topic :: Internet :: WWW/HTTP
	Topic :: Software Development :: Libraries
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
packages = admin_object_actions
include_package_data = True
setup_requires = 
	pytest-runner
tests_require = 
	django>=1.11
	pytest
	pytest-cov
	pytest-django
	pytest-flake8
install_requires = 
	django>=1.11
	django-crum

[check]
metadata = True
restructuredtext = True
strict = True

[clean]
all = True

[egg_info]
tag_build = .dev

[build_sphinx]
source_dir = docs
build_dir = docs/_build
all_files = True
version = attr: admin_object_actions.__version__
release = attr: admin_object_actions.__version__

[upload_sphinx]
upload_dir = docs/_build/html

[upload_docs]
upload_dir = docs/_build/html

[bdist_wheel]
universal = 1

[aliases]
dev_build = clean check flake8 test egg_info sdist bdist_wheel build_sphinx
release_build = clean check flake8 test egg_info -b "" sdist bdist_wheel build_sphinx
test = pytest
ship_it = release_build upload

[bumpversion:file:admin_object_actions/__init__.py]

[bumpversion:file:docs/conf.py]

[pycodestyle]
ignore = E501
exclude = build,dist,docs,.tox

[flake8]
ignore = E501
exclude = build,dist,docs,.tox

[tool:pytest]
DJANGO_SETTINGS_MODULE = test_project.settings
python_files = test*.py
testpaths = test_project
norecursedirs = .git build dist docs
flake8-ignore = E501
addopts = --reuse-db --nomigrations --cache-clear --flake8 --cov admin_object_actions --cov-append --cov-report term-missing

